--- a/components/obs/mc/normal.scss
+++ b/components/obs/mc/normal.scss
@@ -48,7 +48,7 @@ $white: #fff;
     letter-spacing: 2px;
     width: 400px;
     height: 60px;
-    position: fixed;
+    position: absolute;
     top: 730px;
 
     span {
@@ -74,7 +74,7 @@ $white: #fff;
   .id4 {
     @include next_mcidText;
 
-    position: fixed;
+    position: absolute;
     top: 795px;
     left: 300px;
   }
