--- a/components/obs/mc/simple.scss
+++ b/components/obs/mc/simple.scss
@@ -55,7 +55,7 @@ $white: #fff;
     letter-spacing: 2px;
     width: 400px;
     height: 50px;
-    position: fixed;
+    position: absolute;
     top: 730px;
 
     span {
@@ -81,7 +81,7 @@ $white: #fff;
   .id4 {
     @include nextmcidText;
 
-    position: fixed;
+    position: absolute;
     top: 698px;
   }
 
