--- a/components/obs/score/Solid.scss
+++ b/components/obs/score/Solid.scss
@@ -9,7 +9,7 @@
   color: var(--score-color);
   text-align: center;
   font-size: 50px;
-  position: fixed;
+  position: absolute;
   top: 36px;
 }
 
@@ -18,7 +18,7 @@
   width: 430px;
   height: 60px;
   top: 62px;
-  position: fixed;
+  position: absolute;
   text-align: center;
 }
 
@@ -97,7 +97,7 @@
   .box {
     width: 220px;
     height: 60px;
-    position: fixed;
+    position: absolute;
     top: 44px;
     left: 850px;
     display: flex;
@@ -117,7 +117,7 @@
   .logobox {
     height: 160px;
     width: 280px;
-    position: fixed;
+    position: absolute;
     left: 820px;
     top: 900px;
     display: flex;
