--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;500;700;900&display=swap");
+
 /* stylelint-enable */
 @font-face {
   font-family: "Mint Grotesk Regular";
@@ -36,7 +38,7 @@
   --bb-white: #fff;
   --bb-attention: #f06;
   --bb-success: #04c488;
-  --bb-dirty: rgb(170 250 170);
+  --bb-dirty: rgb(204 178 128 / 30%);
 }
 
 html,
