--- a/components/parts/CheckBoxForm.module.scss
+++ b/components/parts/CheckBoxForm.module.scss
@@ -34,7 +34,7 @@
       height: 14px;
       border-right: 2px solid var(--bb-white);
       border-bottom: 2px solid var(--bb-white);
-      top: 0;
+      top: -1px;
       left: 4px;
       transform: rotate(45deg);
     }
