--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Zen+Kaku+Gothic+Antique:wght@400;500;700;900&display=swap");
 
 /* stylelint-enable */
 @font-face {
@@ -50,6 +50,7 @@ body {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: var(--black);
   font-size: 62.5%;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
