--- a/components/obs/score/Solid.scss
+++ b/components/obs/score/Solid.scss
@@ -90,8 +90,19 @@
   .p1PlayerName,
   .p2PlayerName {
     @include name;
+  }
 
-    margin-left: 10px;
+  .player1Name,
+  .player2Name {
+    @include player;
+
+    span {
+      margin-left: 10px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
   }
 
   .box {
