--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -1,22 +1,75 @@
 .button {
-  font-size: 12px;
   font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
   font-weight: 700;
-  padding: 8px 12px;
-  color: var(--bb-white);
-  background-color: var(--bb-black);
-  border-radius: 5px;
   border: none;
   transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
 
+  &.normal {
+    font-size: 12px;
+    padding: 8px 12px;
+    border-radius: 5px;
+    color: var(--bb-white);
+    background-color: var(--bb-black);
+
+    &:hover {
+      background-color: var(--bb-gray);
+      box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
+    }
+
+    &:active {
+      background-color: var(--bb-black);
+      box-shadow: none;
+    }
+  }
+
+  &.small {
+    font-size: 12px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: var(--black);
+    background-color: var(--primary);
+
+    &:hover {
+      background-color: var(--bb-beige-hover);
+      box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
+    }
+
+    &:active {
+      background-color: var(--bb-beige-dark);
+      box-shadow: none;
+    }
+  }
+
+  &.primary {
+    height: 40px;
+    font-size: 14px;
+    padding: 6px 15px;
+    border-radius: 15px;
+    color: var(--black);
+    background-color: var(--primary);
+
+    &:hover {
+      background-color: var(--bb-beige-hover);
+      box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
+    }
+
+    &:active {
+      background-color: var(--bb-beige-dark);
+      box-shadow: none;
+    }
+  }
+}
+
+.light {
+  background-color: var(--bb-white) !important;
+  border: 1px solid var(--bb-beige) !important;
+
   &:hover {
-    background-color: var(--bb-gray);
-    box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
+    background-color: var(--bb-beige-hover) !important;
   }
 
   &:active {
-    background-color: var(--bb-black);
-    box-shadow: none;
+    background-color: var(--bb-beige-active) !important;
   }
 }
 
