--- a/components/obs/mc/normal.scss
+++ b/components/obs/mc/normal.scss
@@ -48,7 +48,7 @@ $white: #fff;
     letter-spacing: 2px;
     width: 400px;
     height: 60px;
-    position: fixed;
+    position: absolute;
     top: 734px;
 
     span {
