--- a/components/obs/score/base.scss
+++ b/components/obs/score/base.scss
@@ -24,6 +24,13 @@ $bold: "Satoshi", "Noto Sans JP", sans-serif;
   font-weight: 900;
 }
 
+@mixin score {
+  margin: 0;
+  color: var(--score-color);
+  text-align: center;
+  position: absolute;
+}
+
 .board {
   position: absolute;
   width: 100%;
@@ -67,4 +74,9 @@ $bold: "Satoshi", "Noto Sans JP", sans-serif;
   @include idText;
 
   right: 20px;
+}
+
+.logo {
+  max-height: 100%;
+  max-width: 100%;
 }
