--- a/components/obs/next/simple.scss
+++ b/components/obs/next/simple.scss
@@ -1,38 +1,8 @@
-// フォントの設定
-$next_regular: "Satoshi", "Noto Sans JP", sans-serif;
-$next_bold: "Satoshi", "Noto Sans JP", sans-serif;
-$next_black: "Satoshi", "Noto Sans JP", sans-serif;
+@import "base";
 
 .simple {
-  // フォントの太さの設定（ライトウェイト）
-  @mixin nextsp_regularWeight {
-    font-family: $next_regular;
-    font-variation-settings: "wght" 400;
-    font-weight: 400;
-  }
-
-  // フォントの太さの設定（ミディアムウェイト）
-  @mixin nextsp_mediumWeight {
-    font-family: $next_regular;
-    font-variation-settings: "wght" 500;
-    font-weight: 500;
-  }
-
-  @mixin nextsp_boldWeight {
-    font-family: $next_black;
-    font-variation-settings: "wght" 700;
-    font-weight: 700;
-  }
-
-  // フォントの太さの設定（ブラックウェイト）
-  @mixin nextsp_blackWeight {
-    font-family: $next_black;
-    font-variation-settings: "wght" 900;
-    font-weight: 900;
-  }
-
   .nextnow {
-    @include nextsp_blackWeight;
+    @include blackWeight;
 
     width: 260px;
     height: 95px;
@@ -56,43 +26,35 @@ $next_black: "Satoshi", "Noto Sans JP", sans-serif;
     justify-content: center;
   }
 
-  @mixin nextsp_statusText {
-    @include nextsp_boldWeight;
-
-    width: 320px;
-    margin: 0;
-    color: var(--sub-color);
-    text-align: left;
-    font-size: 26px;
-    line-height: 26px;
-    font-style: italic;
-    letter-spacing: 2px;
-  }
-
-  @mixin nextsp_boText {
-    @include nextsp_regularWeight;
-
-    width: 320px;
-    margin: 0;
-    color: var(--sub-color);
-    text-align: left;
-    font-size: 26px;
-    line-height: 26px;
-    font-style: italic;
-    letter-spacing: 2px;
-  }
-
   .round {
-    @include nextsp_statusText;
+    @include boldWeight;
+
+    width: 320px;
+    margin: 0;
+    color: var(--sub-color);
+    text-align: left;
+    font-size: 26px;
+    line-height: 26px;
+    font-style: italic;
+    letter-spacing: 2px;
   }
 
   .bo {
-    @include nextsp_boText;
+    @include regularWeight;
+
+    width: 320px;
+    margin: 0;
+    color: var(--sub-color);
+    text-align: left;
+    font-size: 26px;
+    line-height: 26px;
+    font-style: italic;
+    letter-spacing: 2px;
   }
 
-  // スコアの設定
-  @mixin nextsp_scoreText {
-    @include nextsp_boldWeight;
+  // スコアの位置指定
+  .score {
+    @include boldWeight;
 
     margin: 0;
     width: 85px;
@@ -101,78 +63,56 @@ $next_black: "Satoshi", "Noto Sans JP", sans-serif;
     font-size: 60px;
     position: absolute;
     font-variant-numeric: tabular-nums;
-  }
-
-  // スコアの位置指定
-  .scoreLeft {
-    @include nextsp_scoreText;
-
-    left: 450px;
     top: 956px;
+
+    &.p1 {
+      left: 450px;
+    }
+
+    &.p2 {
+      left: 535px;
+    }
   }
 
-  .scoreRight {
-    @include nextsp_scoreText;
-
-    left: 535px;
-    top: 956px;
-  }
-
-  // チーム名及びプレイヤー名の設定
-  @mixin nextsp_teamText {
-    color: var(--sub-color);
-    font-size: 30px;
-    line-height: 30px;
-    letter-spacing: 1px;
-    @include nextsp_regularWeight;
-  }
-
-  // チーム名及びプレイヤー名の設定
-  @mixin nextsp_nameText {
-    color: var(--sub-color);
-    font-size: 34px;
-    line-height: 34px;
-    letter-spacing: 1px;
-    @include nextsp_blackWeight;
-  }
-
-  // プレイヤー名の位置指定
-  @mixin player {
-    @include nextsp_nameText;
-
+  .player {
     margin: 0;
     width: 400px;
     height: 50px;
     position: absolute;
     top: 996px;
-  }
 
-  .playerLeft {
-    @include player;
+    &.p1 {
+      left: 25px;
+      text-align: right;
+    }
 
-    left: 25px;
-    text-align: right;
-  }
+    &.p2 {
+      left: 645px;
+      text-align: left;
+    }
 
-  .playerRight {
-    @include player;
+    .team {
+      @include regularWeight;
 
-    left: 645px;
-    text-align: left;
-  }
+      color: var(--sub-color);
+      font-size: 30px;
+      line-height: 30px;
+      letter-spacing: 1px;
+    }
 
-  .playerTeam {
-    @include nextsp_teamText;
-  }
+    .name {
+      @include blackWeight;
 
-  .playerName {
-    @include nextsp_nameText;
-
-    margin-left: 1rem;
+      color: var(--sub-color);
+      font-size: 34px;
+      line-height: 34px;
+      letter-spacing: 1px;
+      margin-left: 1rem;
+    }
   }
 
   .localsetting {
-    @include nextsp_mediumWeight;
+    @include mediumWeight;
 
     text-align: right;
     font-size: 24px;
@@ -185,7 +125,7 @@ $next_black: "Satoshi", "Noto Sans JP", sans-serif;
   }
 
   .localtime {
-    @include nextsp_boldWeight;
+    @include boldWeight;
 
     font-size: 52px;
     text-align: right;
