--- a/components/obs/mc/simple.scss
+++ b/components/obs/mc/simple.scss
@@ -1,47 +1,4 @@
-// フォントの設定
-$regular: "Satoshi", "Noto Sans JP", sans-serif;
-$bold: "Satoshi", "Noto Sans JP", sans-serif;
-$black: "Satoshi", "Noto Sans JP", sans-serif;
-$darkgray: #111;
-$white: #fff;
-
-// フォントの太さの設定（ライトウェイト）
-@mixin nextsp_regularWeight {
-  font-family: $regular;
-  font-variation-settings: "wght" 400;
-  font-weight: 400;
-}
-
-// フォントの太さの設定（ミディアムウェイト）
-@mixin nextsp_mediumWeight {
-  font-family: $regular;
-  font-variation-settings: "wght" 500;
-  font-weight: 500;
-}
-
-@mixin nextsp_boldWeight {
-  font-family: $bold;
-  font-variation-settings: "wght" 700;
-  font-weight: 700;
-}
-
-// フォントの太さの設定（ブラックウェイト）
-@mixin nextsp_blackWeight {
-  font-family: $black;
-  font-variation-settings: "wght" 900;
-  font-weight: 900;
-}
-
-// MC情報の設定
-@mixin nextmcidText {
-  color: var(--main-color);
-  font-size: 21px;
-  line-height: 21px;
-  letter-spacing: 1px;
-  width: 220px;
-  height: 25px;
-  @include nextsp_boldWeight;
-}
+@import "base";
 
 .simple {
   .mc1,
@@ -69,19 +26,25 @@ $white: #fff;
   }
 
   .mc_team {
-    @include nextsp_regularWeight;
+    @include regularWeight;
   }
 
   .mc_name {
-    @include nextsp_blackWeight;
+    @include blackWeight;
   }
 
   .id1,
   .id2,
   .id3,
   .id4 {
-    @include nextmcidText;
+    @include boldWeight;
 
+    color: var(--main-color);
+    font-size: 21px;
+    line-height: 21px;
+    letter-spacing: 1px;
+    width: 220px;
+    height: 25px;
     position: absolute;
     top: 696px;
   }
