--- a/components/obs/score/Dual.scss
+++ b/components/obs/score/Dual.scss
@@ -2,7 +2,7 @@
 
 // 試合ステータス（Winners Semis, Best of 3など）の設定
 @mixin status {
-  @include boldWeight;
+  @include blackWeight;
 
   position: absolute;
   top: 96px;
@@ -19,7 +19,7 @@
   // スコアの位置指定
   .score {
     @include score;
-    @include boldWeight;
+    @include blackWeight;
 
     top: 44px;
     width: 75px;
@@ -59,7 +59,7 @@
     }
 
     .team {
-      @include regularWeight;
+      @include mediumWeight;
 
       font-size: 25px;
       line-height: 25px;
@@ -69,7 +69,7 @@
     }
 
     .name {
-      @include boldWeight;
+      @include blackWeight;
 
       font-size: 25px;
       line-height: 25px;
