--- a/components/obs/score/base.scss
+++ b/components/obs/score/base.scss
@@ -1,7 +1,8 @@
 // フォントの設定
 $regular: "Satoshi", "Noto Sans JP", sans-serif;
-$mid: "Satoshi", "Noto Sans JP", sans-serif;
+$medium: "Satoshi", "Noto Sans JP", sans-serif;
 $bold: "Satoshi", "Noto Sans JP", sans-serif;
+$black: "Satoshi", "Noto Sans JP", sans-serif;
 
 // フォントの太さの設定（ライトウェイト）
 @mixin regularWeight {
@@ -10,16 +11,22 @@ $bold: "Satoshi", "Noto Sans JP", sans-serif;
   font-weight: 400;
 }
 
-// フォントの太さの設定（ミッドウェイト）
-@mixin midWeight {
-  font-family: $mid;
+// フォントの太さの設定（ミディアムウェイト）
+@mixin mediumWeight {
+  font-family: $medium;
+  font-variation-settings: "wght" 500;
+  font-weight: 500;
+}
+
+@mixin boldWeight {
+  font-family: $bold;
   font-variation-settings: "wght" 700;
   font-weight: 700;
 }
 
-// フォントの太さの設定（ボールドウェイト）
-@mixin boldWeight {
-  font-family: $bold;
+// フォントの太さの設定（ブラックウェイト）
+@mixin blackWeight {
+  font-family: $black;
   font-variation-settings: "wght" 900;
   font-weight: 900;
 }
