regularWeightを全てmediumに、MCとインターバルの位置とサイズ調整

--- a/components/obs/bracket/BracketBox.module.scss
+++ b/components/obs/bracket/BracketBox.module.scss
@@ -61,7 +61,7 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
 }
 
 .playerTeam {
-  @include regularWeight;
+  @include mediumWeight;
 
   font-size: 22px;
   line-height: 42px;
