--- a/components/obs/score/Dual.scss
+++ b/components/obs/score/Dual.scss
@@ -109,7 +109,7 @@
   }
 
   .tournamentName {
-    @include regularWeight;
+    @include mediumWeight;
 
     font-size: 17px;
     line-height: 19px;
