--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -164,3 +164,13 @@ span {
 .markdown li > ol {
   @apply mb-0;
 }
+
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* IE, Edge 対応 */
+  scrollbar-width: none; /* Firefox 対応 */
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  /* Chrome, Safari 対応 */
+  display: none;
+}
