--- a/components/parts/TextboxWithCopy.module.scss
+++ b/components/parts/TextboxWithCopy.module.scss
@@ -19,7 +19,7 @@
 
 .button {
   position: relative;
-  left: -5px;
+  left: 0;
   width: 48px;
   height: 30px;
   font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
