--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -61,6 +61,7 @@
 }
 
 .light {
+  padding: 4px 10px !important;
   background-color: var(--bb-white) !important;
   border: 1px solid var(--bb-beige) !important;
 
