--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  font-family: "Mint Grotesk Bold", "Zen Kaku Gothic Antique", sans-serif;
+  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
   font-weight: 700;
   border: none;
   transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
@@ -95,7 +95,7 @@
   z-index: 1000;
   width: 130%;
   padding: 8px;
-  font-family: "Mint Grotesk Medium", "Zen Kaku Gothic Antique", sans-serif;
+  font-family: "Mint Grotesk Medium", "Noto Sans JP", sans-serif;
   font-size: 10px;
   font-weight: 700;
   color: var(--bb-beige);
