--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -199,14 +199,17 @@ span {
     line-height: 1.7;
   }
 
-  a {
-    color: var(--bb-black);
-    text-decoration: underline;
-    text-underline-offset: 0.1em;
-    transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+  p,
+  ol {
+    a {
+      color: var(--bb-black);
+      text-decoration: underline;
+      text-underline-offset: 0.1em;
+      transition: all 0.5s cubic-bezier(0.33, 1, 0.68, 1);
 
-    &:hover {
-      color: var(--bb-beige);
+      &:hover {
+        color: var(--bb-beige);
+      }
     }
   }
 }
